fixed css on mobile

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -2,6 +2,11 @@
     margin-top: 100px;
     padding: 100px;
     background-color: #001f3f;
+
+    @media (max-width:900px){
+        padding: 20px;
+        
+    }
 }
 
 .Logo{
@@ -35,7 +40,7 @@
 .Footer1Description{
     text-align: justify;
     @media (max-width:900px){
-        text-align: left;
+        text-align: center;
         
     }
     
